testsuite/tests/parser/should_fail/NoPatternSynonyms.stderr

NoPatternSynonyms.hs:3:1: error: [GHC-94426]
    Invalid type signature: pattern P :: ...
    Suggested fix: Perhaps you intended to use PatternSynonyms
